2013-09-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot, src/interp/scwrap2.boot:
	Restore pile mode after ')read' or ')compile'.

2013-09-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intaf.spad.pamphlet,
	src/algebra/curve.spad.pamphlet: Fix wrong changes of variables.

2013-09-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intalg.spad.pamphlet,
	src/algebra/funcpkgs.spad.pamphlet: Factor Trager
	resultant in appropriate extension.

2013-09-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intaf.spad.pamphlet,
	src/algebra/integrat.spad.pamphlet: Eliminate irrationals
	introduced by Euler substitution.

2013-09-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: Update for future gcl-2.6.1x versions.

2013-09-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/incl.boot, src/share/doc/msgs/s2-us.msgs:
	Fix error messages about included files.

2013-09-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/primitives.lisp: Allow floating point
	optimizations for Clozure CL 1.8 and up.

2013-09-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/modhpsol.spad.pamphlet,
	src/algebra/rec.spad.pamphlet: Minor cleanups.

2013-09-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2ups.spad.pamphlet: Add expander
	for undefined functions.
	src/input/series3.input: New file.
	src/input/Makefile.in: Adjust.

2013-09-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fspace.spad.pamphlet: More efficient
	equality for formal derivatives.

2013-09-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/primitives.lisp: Fix problem with gcl-2.6.9
	and up.

2013-09-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet: Fix derivatives
	of Whittaker functions.

2013-09-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intrf.spad.pamphlet,