@@ -1,3 +1,9 @@
+2013-09-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* Makefile.in, src/interp/Makefile.in,
+	src/doc/Makefile.in, src/etc/Makefile.in: Makefile fixes.
+	src/scripts/mkdist.sh: Update.
+
 2013-09-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/i-syscmd.boot, src/interp/scwrap2.boot:
